--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "type": "module",
   "scripts": {
-    "dev": "NODE_ENV=production nodemon server.ts --es-module-specifier-resolution=node"
+    "dev": "nodemon server.ts --es-module-specifier-resolution=node"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +33,7 @@
     "express-jwt": "^8.4.0",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "node-jq": "^2.3.4",
     "node-mailjet": "^5.1.1",
