package file update

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.ts",
   "type": "module",
   "scripts": {
+    "start": "node your-script.js",
     "dev": "nodemon server.ts --es-module-specifier-resolution=node"
   },
   "keywords": [],
