--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.ts",
-  "type": "module",
+  
   "scripts": {
-    "start": "node server.ts",
+    "start": "ts-node server.ts",
     "dev": "nodemon server.ts --es-module-specifier-resolution=node"
   },
   "keywords": [],
